gccida/c2/convert_regs_2
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_regs_2/src/reg-stack.c:3387:16: error: use of undeclared identifier 'off_6474F4'
fprintf( file, off_6474F4, 9LL); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_regs_2/src/reg-stack.c:3395:16: error: use of undeclared identifier 'off_6474F4'
fprintf( file, off_6474F4, 11LL); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_regs_2/src/reg-stack.c:3403:16: error: use of undeclared identifier 'off_6474F4'
fprintf( file, off_6474F4, 13LL); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_regs_2/src/reg-stack.c:3411:16: error: use of undeclared identifier 'off_6474F4'
fprintf( file, off_6474F4, 15LL); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_regs_2/src/reg-stack.c:3414:16: error: use of undeclared identifier 'off_6474F4'
fprintf( file, off_6474F4, 8LL); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_regs_2/src/reg-stack.c:3422:16: error: use of undeclared identifier 'off_6474F4'
fprintf( file, off_6474F4, 10LL); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_regs_2/src/reg-stack.c:3430:16: error: use of undeclared identifier 'off_6474F4'
fprintf( file, off_6474F4, 12LL); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_regs_2/src/reg-stack.c:3438:16: error: use of undeclared identifier 'off_6474F4'
fprintf( file, off_6474F4, 14LL); 
               ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_regs_2/src/reg-stack.c:3447:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v21 = ( rtx)v21[1]; 
            ^~~~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/convert_regs_2/src/obj/reg-stack.o] Error 1
